--- a/Cloud/HOCO.asmdef
+++ b/Cloud/HOCO.asmdef
@@ -2,16 +2,13 @@
     "name": "HOCO",
     "rootNamespace": "",
     "references": [
-        "UniTask"
+        "GUID:f51ebe6a0ceec4240a699833d6309b23"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
-    "precompiledReferences": [
-        "Newtonsoft.Json.dll",
-        "nunit.framework.dll"
-    ],
+    "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
