--- a/.github/workflows/UpdateUnityPackage.yml
+++ b/.github/workflows/UpdateUnityPackage.yml
@@ -23,7 +23,7 @@ jobs:
         unitypackage=$(ls *.unitypackage 2> /dev/null | head -n 1)
         echo "Found UnityPackage: $unitypackage"
         if [ -n "$unitypackage" ]; then
-          new_name="YourPackageName-${{ env.PACKAGE_VERSION }}.unitypackage"
+          new_name="RELEASE-${{ env.PACKAGE_VERSION }}.unitypackage"
           mv $unitypackage $new_name
           echo "unitypackage_path=$new_name" >> $GITHUB_ENV
         fi
