--- a/BlocUnited.Hoco.asmdef
+++ b/BlocUnited.Hoco.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "BlocUnited.Hoco",
-    "rootNamespace": "",
+    "rootNamespace": "Hoco",
     "references": [
         "GUID:f51ebe6a0ceec4240a699833d6309b23"
     ],
@@ -8,7 +8,9 @@
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
-    "precompiledReferences": [],
+    "precompiledReferences": [
+        ""
+    ],
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
